envoy/envoy.yml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10200 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: elastic
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service_elastic }
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_elastic
    connect_timeout: 1s
    type: STRICT_DNS
    hosts: [{ socket_address: { address: elastic, port_value: 9200 }}]
